jEdit 5.4 version history
       (changes since jEdit 5.3.0)
:encoding=UTF-8:

{{{ Version 5.4.0

Thanks to Björn "Vampire" Kautler, Eric Le Lay, Jesse Pavel, Wayne Zhang,
Makarius, A Vontobel, Marc Häfner, Jordan Miner, Jack J. Woehr, Alan Ezust,
Adam S, Wim West and Dale Anson for contributing to this release.

{{{ Bug Fixes

- Bug 3857 fixed, related to resolving symlinks of buffers and checking for
  updated buffers (Patch # 589 - Wim West)

- Fix bug #2732 - syntax highlighting broken if non-visible lines change
  (Patch #580 - Marc Häfner)

- Fix bug #3659 - Macro Keywords_to_Upper_Case fails to find class
  (Patch #582 - Marc Häfner)

- Fix bug #3949 - Macro Display_Shortcuts show no/wrong results
  (Patch #581 - Marc Häfner)

- Fix bug #3944: Select All checkbox initially disabled. (Alan Ezust)

- Fix bug #3983: filename completion prefered longest filename when no
  match with exact length was found. Prefer the first one (Eric Le Lay)

- Fix bug #3913: beanshell do-while loop bug (Patch #572 Jesse Pavel)

- Fix Java_File_Save macro: accept text after class name (Eric Le Lay)

- Fix bug #3936, better choice for text area corner colors (Dale Anson)

- Fix bug #3717, gutter lines not aligning with text area lines (Dale Anson)

- Fix bug #3937, issue with non-capturing groups in regex search and replace
  (Dale Anson)

- Fix bug #3924, changes to mode files are not detected when ~/.jedit/modes
  is a symlink. (Dale Anson)

- Fix bug #3920, cannot change alpha value of a color in the syntax highlighting
  settings. (Dale Anson)

- Fix bug #3943, issues with move lines up and down macros. (Dale Anson)

- Fix bug #3923, documentation bug about where auto-saved files are saved.
  (Dale Anson)

- Fix bug #3916, null pointer exception in ChunkCache. (Dale Anson)

- Add missing source and target version to compile-installer task to not
  accidentally get an installer that needs a newer Java version than jEdit
  itself does. (Björn "Vampire" Kautler)
